--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=https://pc-builder-lovat.vercel.app/
+NEXTAUTH_URL=https://pc-builder-two-murex.vercel.app/
 NEXTAUTH_SECRET=pcbuilderhmonir
 
 GITHUB_ID=7402471471dcb795c446
